--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,29 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<%= nav_bar :static => :top, :brand => "Salary Compare", :responsive => true do %>
+  <%= menu_group do %>
+      <%= drop_down "People" do%>
+         <%= menu_item "All People", people_path %>
+        <%= menu_item "Create Person", new_person_path %>
+      <% end %>
+      <%= menu_divider %>
+      <%= drop_down "Employers" do%>
+        <%= menu_item "All Employers", employers_path %>
+        <%= menu_item "Create Employer", new_employer_path %>
+      <% end %>
+      <%= menu_divider %>
+      <%= drop_down "Job Titles" do%>
+        <%= menu_item "All Job Titles", job_titles_path %>
+        <%= menu_item "Create Job Title", new_job_title_path %>
+      <% end %>
+      <%= menu_divider %>
+      <%= drop_down "Jobs" do%>
+        <%= menu_item "All Jobs", jobs_path %>
+        <%= menu_item "Create Job", new_job_path %>
+      <% end %>
+  <% end %>
+<% end %>
 <%= yield %>
 
 </body>
