--- a/app/views/employers/index.haml
+++ b/app/views/employers/index.haml
@@ -1,15 +1,8 @@
-= link_to 'View People', people_path, {class: 'btn'}
-= link_to 'Create a Job', new_job_path, {class: 'btn'}
-= link_to 'Create a Job Title', new_job_title_path, {class: 'btn'}
-%p
-= link_to 'Create an Employer', new_employer_path, {class: 'btn'}
-
-%h1 All People
+%h1 All Employers
 
 %table{:border => 1, :class => 'table table-striped'}
   %tr
     %th Name
-    %th{:colspan => 2} Actions
   - @employers.each do |employer|
     %tr
       %td= link_to employer.name, employer_path(employer)
