--- a/app/views/jobs/index.haml
+++ b/app/views/jobs/index.haml
@@ -1,14 +1,18 @@
-%h1 All Job Titles
+%h1 All Jobs
 
 %table{:border => 1, :class => 'table table-striped'}
   %tr
-    %th Name
-    %th Average Salary
+    %th Title
+    %th Employer
+    %th Person
+    %th Salary
     / %th{:colspan => 2} Actions
-  - @job_titles.each do |job_title|
+  - @jobs.each do |job|
     %tr
-      %td= link_to job_title.name, job_title_path(job_title)
-      %td= job_title.average_salary
+      %td= link_to "#{job.job_title.name}", job_path(job)
+      %td= job.employer
+      %td= job.person.name
+      %td= "$#{job.salary}"
       / %td= link_to 'Edit', edit_person_path(person), {class: 'btn'}
       / %td= link_to 'Delete', person_path(person), {method: :delete, class: 'btn btn-warning'}
 
