--- a/app/views/people/show.haml
+++ b/app/views/people/show.haml
@@ -1,10 +1,11 @@
 .container
-  %p
-    #{@person.name}
-  - @person.jobs.each do |job|
-    %p= link_to(job.job_title.try(:name), job_title_path(job.job_title.id))
-    %p= link_to(job.employer.try(:name), employer_path(job.employer.id))
-    %p= "Salary: $#{job.salary}"
-    %br
+  %h3= @person.name
+  %ol
+    - @person.jobs.each do |job|
+      %li
+        %p= link_to(job.job_title.try(:name), job_title_path(job.job_title.id))
+        %p= link_to(job.employer.try(:name), employer_path(job.employer.id))
+        %p= "Salary: $#{job.salary}"
+        %br
 
   / %p= link_to 'Edit', edit_person_path(@person), class: 'btn'
